# darling-overlay

./: README  overlays.xml
app-emulation/darling/: Manifest  darling-9999.ebuild
dev-libs/libdispatch/: Manifest  libdispatch-9999.ebuild
dev-libs/libdispatch/files/: dispatch.h  gnustep-blocks.patch
dev-libs/libkqueue/: Manifest  libkqueue-2.0.1.ebuild
dev-libs/libkqueue/files/: CMakeLists.txt
dev-libs/libpthread_workqueue/: Manifest  libpthread_workqueue-0.8.2.ebuild
dev-libs/libpthread_workqueue/files/: CMakeLists.txt
gnustep-base/gnustep-base/: Manifest  gnustep-base-9999.ebuild
gnustep-base/gnustep-corebase/: Manifest  gnustep-corebase-9999.ebuild
gnustep-base/gnustep-make/: Manifest  gnustep-make-9999.ebuild
gnustep-base/gnustep-opal/: Manifest  gnustep-opal-9999.ebuild
gnustep-base/libobjc2/: Manifest  libobjc2-9999.ebuild
gnustep-base/libobjc2/files/: dont-break-libpath.patch  version.patch
metadata/: layout.conf
profiles/: repo_name
sys-fs/darling-fuse/: Manifest  darling-fuse-9999.ebuild
